--- a/template.yml
+++ b/template.yml
@@ -10,6 +10,10 @@ Parameters:
     Description: Set the CPUCredits threshold
     Type: String
     Default: "50"
+  Region:
+    Description: AWS region where the instance is running
+    Type: String
+    Default: "us-east-1"
 
 
 Resources:
@@ -23,11 +27,20 @@ Resources:
         An Amazon SNS trigger that enabled T2 unlimited based on CPU usage
       MemorySize: 128
       Timeout: 3
-
+      Policies:
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action:
+                - ec2:DescribeInstanceCreditSpecifications
+                - ec2:ModifyInstanceCreditSpecification
+                - cloudwatch:GetMetricStatistics
+              Resource: "*"
       Environment:
         Variables:
           INSTANCE_ID: !Ref InstanceId
           THRESHOLD: !Ref Threshold
+          REGION: !Ref Region
       Events:
         SNS1:
           Type: SNS
